--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <h3 class="text-center md:text-left lg:text-left text-5xl font-semibold pb-8 p-4">Kitchenware</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 p-4 gap-y-8 gap-x-0 md:gap-x-8 lg:gap-x-8">
                 <!-- first card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="firstCardById()" id="first-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod1.png" alt="Shoes" class="pb-8" />
@@ -54,12 +55,13 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="first-card-title" class="card-title">K. Accessories</h2>
+                        <p><span id="first-card-price">100.00</span> TK</p>
                     </div>
                 </div>
                 <!-- 2nd card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="secondCardById()" id="second-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod2.png" alt="Shoes" class="pb-8" />
@@ -72,12 +74,13 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="second-card-title" class="card-title">Kitchen Accessories</h2>
+                        <p><span id="second-card-price">200.00</span> TK</p>
                     </div>
                 </div>
                 <!-- third card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="thirdCardById()" id="third-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod3.png" alt="Shoes" class="pb-8" />
@@ -90,8 +93,8 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="third-card-title" class="card-title">Home Cooker</h2>
+                        <p><span id="third-card-price">300.00</span> TK</p>
                     </div>
                 </div>
             </div>
@@ -99,7 +102,8 @@
             <h3 class="text-center md:text-left lg:text-left text-5xl font-semibold pb-8 pt-8 p-4">Sportswear</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 p-4 gap-y-8 gap-x-0 md:gap-x-8 lg:gap-x-8">
                 <!-- fourth card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="fourthCardById()" id="fourth-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod4.png" alt="Shoes" class="pb-8" />
@@ -112,12 +116,13 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="fourth-card-title" class="card-title">Sports Back Cap</h2>
+                        <p><span id="fourth-card-price">400.00</span> TK</p>
                     </div>
                 </div>
                 <!-- fifth card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="fifthCardById()" id="fifth-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod5.png" alt="Shoes" class="pb-8" />
@@ -130,12 +135,13 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="fifth-card-title" class="card-title">Full Jersey Set</h2>
+                        <p><span id="fifth-card-price">500.00</span> TK</p>
                     </div>
                 </div>
                 <!-- sixth card -->
-                <div class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
+                <div onclick="sixthCardById()" id="sixth-card"
+                    class="border-2 card w-full md:w-96 lg:w-96 bg-base-100 rounded-lg p-4">
                     <figure
                         class="rounded-lg mx-0 md:mx-4 lg:mx-4 mt-0 md:mt-4 lg:mt-4 px-0 md:px-10 lg:px-10 pt-0 md:pt-10 lg:pt-10 bg-[#F8F8F8]">
                         <img src="images/prod6.png" alt="Shoes" class="pb-8" />
@@ -148,8 +154,8 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
-                        <h2 class="card-title">K. Accessories</h2>
-                        <p>39.00 TK</p>
+                        <h2 id="sixth-card-title" class="card-title">Sports cates</h2>
+                        <p><span id="sixth-card-price">600.00</span> TK</p>
                     </div>
                 </div>
             </div>
@@ -158,23 +164,42 @@
             <div class="bg-[white] p-4 rounded-lg mb-8">
                 <h3 class="text-2xl font-medium pb-4">Have coupon?</h3>
                 <div class="join w-1/2 mx-auto">
-                    <input class="input input-bordered join-item" placeholder="coupn code" />
-                    <button class="join-item px-6 py-2 bg-[#E527B2] text-white">Subscribe</button>
+                    <input id="coupon-id" class="input input-bordered join-item" placeholder="coupon code" />
+                    <button disabled onclick="couponSet()" id="btn-coupon"
+                        class="join-item px-6 py-2 bg-[#E527B2] text-white">Subscribe</button>
                 </div>
             </div>
             <div class="p-6 pb-20 text-2xl font-semibold bg-white rounded-lg">
-                <ol class="list-decimal p-6">
-                    <li>Home Decor</li>
-                    <li>Sports Cate</li>
-                    <li>Home Cooker</li>
+                <ol id="product-list" class="list-decimal p-6">
+
                 </ol>
-                <h3>Total price: 00TK</h3>
-                <h3>Discount: 00TK</h3>
-                <h3>Price: 00TK</h3>
+                <h3>Total price: <span id="total-price">00</span>TK</h3>
+                <h3>Discount: <span id="discount-price">00</span>TK</h3>
+                <h3>Price: <span id="total">00</span>TK</h3>
             </div>
-            <button class="relative ml-12 mt-[-20px] w-3/4 rounded-lg text-white py-3 px-8 bg-[#E527B2]">Make Purchase</button>
+            <button onclick="my_modal_5.showModal()" id="purchase-button"
+                class="relative ml-12 mt-[-20px] w-3/4 rounded-lg text-white py-3 px-8 bg-[#E527B2]">Make
+                Purchase</button>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                <form method="dialog" class="modal-box text-center">
+                    <div class="w-fit mx-auto"><img class="" src="images/congo.png"></div>
+                    <h3 class="font-bold text-lg">Congratulations</h3>
+                    <p class="py-4">Your Purchase the product</p>
+                    <div class="text-center">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button id="final-purchase" class="px-8 py-3 rounded-lg text-xl font-semibold bg-[#E527B2] text-white">Go Home</button>
+                    </div>
+                </form>
+            </dialog>
         </div>
     </section>
+
+
+
+
+    <script src="scripts/common.js"></script>
+    <script src="scripts/cart.js"></script>
 </body>
 
 </html>
