made some changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <!-- cart section -->
-    <section class="container mx-auto gap-x-8 flex flex-col md:flex-row lg:flex-row pt-24">
+    <section class="container mx-auto gap-x-8 flex flex-col  lg:flex-row pt-24">
         <div>
             <h3 class="text-center md:text-left lg:text-left text-5xl font-semibold pb-8 p-4">Kitchenware</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 p-4 gap-y-8 gap-x-0 md:gap-x-8 lg:gap-x-8">
@@ -56,7 +56,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="first-card-title" class="card-title">K. Accessories</h2>
-                        <p><span id="first-card-price">100.00</span> TK</p>
+                        <p><span id="first-card-price">50.52</span> TK</p>
                     </div>
                 </div>
                 <!-- 2nd card -->
@@ -75,7 +75,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="second-card-title" class="card-title">Kitchen Accessories</h2>
-                        <p><span id="second-card-price">200.00</span> TK</p>
+                        <p><span id="second-card-price">20.03</span> TK</p>
                     </div>
                 </div>
                 <!-- third card -->
@@ -94,7 +94,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="third-card-title" class="card-title">Home Cooker</h2>
-                        <p><span id="third-card-price">300.00</span> TK</p>
+                        <p><span id="third-card-price">45.90</span> TK</p>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="fourth-card-title" class="card-title">Sports Back Cap</h2>
-                        <p><span id="fourth-card-price">400.00</span> TK</p>
+                        <p><span id="fourth-card-price">78.00</span> TK</p>
                     </div>
                 </div>
                 <!-- fifth card -->
@@ -136,7 +136,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="fifth-card-title" class="card-title">Full Jersey Set</h2>
-                        <p><span id="fifth-card-price">500.00</span> TK</p>
+                        <p><span id="fifth-card-price">99.17</span> TK</p>
                     </div>
                 </div>
                 <!-- sixth card -->
@@ -155,13 +155,13 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                         </div>
                         <h2 id="sixth-card-title" class="card-title">Sports cates</h2>
-                        <p><span id="sixth-card-price">600.00</span> TK</p>
+                        <p><span id="sixth-card-price">159.33</span> TK</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="pt-28">
-            <div class="bg-[white] p-4 rounded-lg mb-8">
+            <div class="bg-[white] p-4 rounded-lg mb-8 md:text-center lg:text-left">
                 <h3 class="text-2xl font-medium pb-4">Have coupon?</h3>
                 <div class="join w-1/2 mx-auto">
                     <input id="coupon-id" class="input input-bordered join-item" placeholder="coupon code" />
@@ -169,15 +169,15 @@
                         class="join-item px-6 py-2 bg-[#E527B2] text-white">Subscribe</button>
                 </div>
             </div>
-            <div class="p-6 pb-20 text-2xl font-semibold bg-white rounded-lg">
+            <div class="p-6 pb-20 text-2xl font-semibold bg-white rounded-lg md:text-center lg:text-left">
                 <ol id="product-list" class="list-decimal p-6">
 
                 </ol>
-                <h3>Total price: <span id="total-price">00</span>TK</h3>
-                <h3>Discount: <span id="discount-price">00</span>TK</h3>
-                <h3>Price: <span id="total">00</span>TK</h3>
+                <h3>Total price: <span id="total-price">00.00</span> TK</h3>
+                <h3>Discount: <span id="discount-price">00.00</span> TK</h3>
+                <h3>Price: <span id="total">00.00</span> TK</h3>
             </div>
-            <button onclick="my_modal_5.showModal()" id="purchase-button"
+            <button disabled onclick="my_modal_5.showModal()" id="purchase-button"
                 class="relative ml-12 mt-[-20px] w-3/4 rounded-lg text-white py-3 px-8 bg-[#E527B2]">Make
                 Purchase</button>
             <!-- Open the modal using ID.showModal() method -->
